--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-use": "^17.5.0",
     "sonner": "^1.4.41",
+    "stripe": "^15.6.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
@@ -38,7 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.21.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "pg": "^8.11.5",
